TLS: Rename _stat variable to peer_cert_status

_stat shadows a global variable defined in mingw32 so this patch
renames it to peer_cert_status in wocky_tls_session_verify_peer

https://bugs.freedesktop.org/show_bug.cgi?id=45272