wocky/wocky-tls.c
@@ -688,7 +688,7 @@ wocky_tls_session_verify_peer (WockyTLSSession    *session,
                                WockyTLSCertStatus *status)
 {
   int rval = -1;
-  guint _stat = 0;
+  guint peer_cert_status = 0;
   gboolean peer_name_ok = TRUE;
   gnutls_certificate_verify_flags check;
 
@@ -732,7 +732,7 @@ wocky_tls_session_verify_peer (WockyTLSSession    *session,
   DEBUG ("setting gnutls verify flags level to: %s",
       wocky_enum_to_nick (WOCKY_TYPE_TLS_VERIFICATION_LEVEL, level));
   gnutls_certificate_set_verify_flags (session->gnutls_cert_cred, check);
-  rval = gnutls_certificate_verify_peers2 (session->session, &_stat);
+  rval = gnutls_certificate_verify_peers2 (session->session, &peer_cert_status);
 
   if (rval != GNUTLS_E_SUCCESS)
     {
@@ -876,7 +876,7 @@ wocky_tls_session_verify_peer (WockyTLSSession    *session,
       for (x = 0; status_map[x].gnutls != 0; x++)
         {
           DEBUG ("checking gnutls error %d", status_map[x].gnutls);
-          if (_stat & status_map[x].gnutls)
+          if (peer_cert_status & status_map[x].gnutls)
             {
               DEBUG ("gnutls error %d set", status_map[x].gnutls);
               *status = status_map[x].wocky;
